# InfoGraficaDeliverable02

./: CMakeLists.txt  OpenGLAppDeliver.sln
OpenGLApp/: Main.cpp  OpenGLApp.vcxproj  OpenGLApp.vcxproj.filters  muffin2.mtl  muffin3part.mtl  shader.fs  shader_light.fs
OpenGLApp/x64/Debug/: OpenGLApp.exe.recipe  OpenGLApp.ilk  vc143.idb
OpenGLApp/x64/Debug/OpenGLApp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OpenGLApp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
